erDiagram
    RES_PARTNER {
        int id
        string name
        string email
        string phone
    }

    RES_USERS {
        int id
        string name
        string login
        string email
    }

    PRODUCT_TEMPLATE {
        int id
        string name
        int catalog_id
        float min_stock
        float catalog_stock_qty
    }

    CATALOG_VENDOR {
        int id
        int partner_id
        int user_id
        string store_name
        string status
        string phone
        string email
        text notes
    }

    CATALOG_CUSTOMER {
        int id
        int partner_id
        int user_id
        string status
        string phone
        string email
        text notes
    }

    CATALOG_CATALOG {
        int id
        string name
        text description
        string image_url
        binary image_1920
        bool active
        int vendor_id
        int product_count
    }

    CATALOG_INVENTORY_MOVEMENT {
        int id
        int vendor_id
        int product_id
        string sku
        string type
        float quantity
        float before_stock
        float after_stock
        text note
        string reference
        int user_id
    }

    CATALOG_PRICING_SETTING {
        int id
        int partner_id
        string currency
        float default_margin_percent
        float tax_percent
        string round_to
        bool allow_manual_discounts
        string min_price_policy
    }

    CATALOG_PRICING_RULE {
        int id
        int partner_id
        string name
        string scope
        string target
        string rule_type
        float value
        int min_qty
        int priority
        string status
    }

    CATALOG_COUPON {
        int id
        string code
        text description
        string discount_type
        float value
        float min_order_amount
        float max_discount_amount
        int max_uses
        int max_uses_per_user
        date expires_at
        string status
        bool one_per_customer
        bool new_customers_only
        int usage_count
        int vendor_partner_id
        bool active
    }

    CATALOG_PROMOTION {
        int id
        string name
        string code
        text description
        string promotion_type
        float value
        float min_order_amount
        float max_discount_amount
        string applies_to
        date start_date
        date end_date
        int usage_limit
        int used_count
        string status
        int vendor_partner_id
        bool active
    }

    CATALOG_AUDIT_LOG {
        int id
        string code
        datetime occurred_at
        string actor_name
        string actor_role
        string ip_address
        string action
        string target
        string severity
        string status
        text meta_json
    }

    CATALOG_COUPON_CATALOG_REL {
        int coupon_id
        int catalog_id
    }

    RES_PARTNER ||--o{ CATALOG_VENDOR : "partner_id"
    RES_USERS ||--o{ CATALOG_VENDOR : "user_id"
    RES_PARTNER ||--o{ CATALOG_CUSTOMER : "partner_id"
    RES_USERS ||--o{ CATALOG_CUSTOMER : "user_id"
    RES_PARTNER ||--o{ CATALOG_CATALOG : "vendor_id"

    CATALOG_CATALOG ||--o{ PRODUCT_TEMPLATE : "catalog_id"

    RES_PARTNER ||--o{ CATALOG_INVENTORY_MOVEMENT : "vendor_id"
    PRODUCT_TEMPLATE ||--o{ CATALOG_INVENTORY_MOVEMENT : "product_id"
    RES_USERS ||--o{ CATALOG_INVENTORY_MOVEMENT : "user_id"

    RES_PARTNER ||--o{ CATALOG_PRICING_SETTING : "partner_id"
    RES_PARTNER ||--o{ CATALOG_PRICING_RULE : "partner_id"

    RES_PARTNER ||--o{ CATALOG_COUPON : "vendor_partner_id"
    RES_PARTNER ||--o{ CATALOG_PROMOTION : "vendor_partner_id"

    CATALOG_COUPON ||--o{ CATALOG_COUPON_CATALOG_REL : "coupon_id"
    CATALOG_CATALOG ||--o{ CATALOG_COUPON_CATALOG_REL : "catalog_id"
